# llm-shield-rs

./: .dockerignore  .gitignore  ANALYSIS_SUMMARY.txt  BENCHMARK_COMPLIANCE_REPORT.md  CONVERSION_PLANNING_COMPLETE.md  Cargo.toml  DOCKER_FILES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  LLM_GUARD_ANALYSIS_REPORT.md  PHASE_10A_COMPLETION_REPORT.md  PHASE_2B_INFRA_INTEGRATION_REPORT.md  PHASE_8_DEPENDENCY_MAP.md  PHASE_8_EXECUTIVE_SUMMARY.md  PHASE_8_FIX_CHECKLIST.md  PHASE_8_RESULTCACHE_IMPLEMENTATION_REPORT.md  PHASE_8_SWARM_COMPLETION_REPORT.md  PHASE_8_TEST_QUALITY_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  package.json
crates/llm-shield-anonymize/: Cargo.toml
crates/llm-shield-anonymize/src/: anonymizer.rs  config.rs  lib.rs  placeholder.rs  replacer.rs  types.rs  vault.rs
crates/llm-shield-anonymize/src/detector/: mod.rs  ner.rs  patterns.rs  regex.rs  validators.rs
crates/llm-shield-anonymize/tests/: detector_performance_test.rs  integration_test.rs  vault_test.rs
crates/llm-shield-api/: Cargo.toml
crates/llm-shield-api/benches/: api_bench.rs
crates/llm-shield-api/src/: cloud_init.rs  lib.rs  main.rs  router.rs  server.rs  state.rs
crates/llm-shield-api/src/auth/: mod.rs  service.rs  storage.rs  types.rs
crates/llm-shield-api/src/config/: app.rs  auth.rs  cloud.rs  mod.rs  observability.rs  rate_limit.rs
crates/llm-shield-api/src/extractors/: mod.rs
crates/llm-shield-api/src/handlers/: health.rs  mod.rs  scan.rs  scanners.rs
crates/llm-shield-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/llm-shield-api/src/models/: error.rs  mod.rs  request.rs  response.rs
crates/llm-shield-api/src/observability/: mod.rs
crates/llm-shield-api/src/rate_limiting/: concurrent.rs  limiter.rs  mod.rs  quota.rs  types.rs
crates/llm-shield-api/src/services/: mod.rs  scanner_service.rs
crates/llm-shield-api/tests/: health_tests.rs  scan_tests.rs  scanners_tests.rs
crates/llm-shield-api/tests/common/: mod.rs
crates/llm-shield-benches/: Cargo.toml
crates/llm-shield-benches/benches/: binary_size.rs  cold_start.rs  cpu_usage.rs  latency.rs  memory.rs  throughput.rs
crates/llm-shield-benches/src/: comparison.rs  fixtures.rs  lib.rs  metrics.rs
crates/llm-shield-benches/tests/: benchmark_runner_test.rs
crates/llm-shield-benchmarks/: Cargo.toml
crates/llm-shield-benchmarks/src/: lib.rs
crates/llm-shield-benchmarks/src/adapters/: mod.rs  targets.rs
crates/llm-shield-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
crates/llm-shield-cloud/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
crates/llm-shield-cloud-aws/: Cargo.toml  README.md
crates/llm-shield-cloud-aws/iam-policies/: README.md  cloudwatch-policy.json  llm-shield-full-policy.json  s3-policy.json  secrets-manager-policy.json
crates/llm-shield-cloud-aws/src/: lib.rs  observability.rs  secrets.rs  storage.rs
crates/llm-shield-cloud-aws/tests/: integration_observability.rs  integration_secrets.rs  integration_storage.rs
crates/llm-shield-cloud-azure/: Cargo.toml  README.md
crates/llm-shield-cloud-azure/rbac-roles/: key-vault-role.json  llm-shield-full-role.json  monitor-role.json  storage-role.json
crates/llm-shield-cloud-azure/src/: lib.rs  observability.rs  observability_stub.rs  secrets.rs  secrets_stub.rs  storage.rs  storage_stub.rs
crates/llm-shield-cloud-gcp/: Cargo.toml  README.md
crates/llm-shield-cloud-gcp/iam-roles/: llm-shield-full-role.yaml  monitoring-role.yaml  secret-manager-role.yaml  storage-role.yaml
crates/llm-shield-cloud-gcp/src/: lib.rs  observability.rs  observability_stub.rs  secrets.rs  secrets_stub.rs  storage.rs  storage_stub.rs
crates/llm-shield-cloud/benches/: cloud_bench.rs
crates/llm-shield-cloud/src/: config.rs  error.rs  lib.rs  observability.rs  secrets.rs  storage.rs
crates/llm-shield-core/: Cargo.toml
crates/llm-shield-core/src/: error.rs  lib.rs  result.rs  scanner.rs  types.rs  vault.rs
crates/llm-shield-core/src/adapters/: config.rs  mod.rs  policy.rs
crates/llm-shield-dashboard/: Cargo.toml  README.md
crates/llm-shield-dashboard/examples/: basic_server.rs
crates/llm-shield-dashboard/src/: config.rs  error.rs  health.rs  lib.rs  server.rs
crates/llm-shield-dashboard/src/api/: mod.rs
crates/llm-shield-dashboard/src/auth/: mod.rs
crates/llm-shield-dashboard/src/db/: migrations.rs  mod.rs  pool.rs
crates/llm-shield-dashboard/src/graphql/: mod.rs
crates/llm-shield-dashboard/src/middleware/: mod.rs
crates/llm-shield-dashboard/src/models/: mod.rs
crates/llm-shield-dashboard/tests/: integration_tests.rs
crates/llm-shield-models/: Cargo.toml
crates/llm-shield-models/benches/: cache_bench.rs  registry_bench.rs
crates/llm-shield-models/src/: cache.rs  inference.rs  lib.rs  model_loader.rs  registry.rs  tokenizer.rs  types.rs
crates/llm-shield-models/tests/: cache_test.rs  inference_test.rs  integration_test.rs  model_loader_test.rs  registry_test.rs  token_classification_test.rs  tokenizer_offsets_test.rs  tokenizer_test.rs
crates/llm-shield-py/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PSEUDOCODE.md  README.md  SPECIFICATION.md  pyproject.toml
crates/llm-shield-py/examples/: basic_usage.py  fastapi_integration.py
crates/llm-shield-py/python/llm_shield/: __init__.py
crates/llm-shield-py/python/tests/: conftest.py
crates/llm-shield-py/src/: error.rs  lib.rs  types.rs  utils.rs  vault.rs
crates/llm-shield-py/src/scanners/: input.rs  mod.rs  output.rs
crates/llm-shield-scanners/: Cargo.toml
crates/llm-shield-scanners/benches/: scanner_benchmarks.rs
crates/llm-shield-scanners/src/: common.rs  lib.rs
crates/llm-shield-scanners/src/input/: ban_code.rs  ban_competitors.rs  ban_substrings.rs  gibberish.rs  (+9 more)
crates/llm-shield-sdk/: Cargo.toml  README.md
crates/llm-shield-sdk/src/: builder.rs  config.rs  error.rs  lib.rs  prelude.rs  preset.rs  scanner_factory.rs  shield.rs
crates/llm-shield-wasm/: Cargo.toml  README.md  WASM_ML_INTEGRATION.md  package.json
crates/llm-shield-wasm/src/: lib.rs
(+148 files in other folders)
