[workspace]
resolver = "2"
members = [
    "crates/llm-shield-core",
    "crates/llm-shield-models",
    "crates/llm-shield-nlp",
    "crates/llm-shield-scanners",
    "crates/llm-shield-secrets",
    "crates/llm-shield-anonymize",
    "crates/llm-shield-api",
    "crates/llm-shield-wasm",
    "crates/llm-shield-py",
    "crates/llm-shield-cloud",
    "crates/llm-shield-cloud-aws",
    "crates/llm-shield-cloud-gcp",
    "crates/llm-shield-cloud-azure",
    "crates/llm-shield-sdk",
    "crates/llm-shield-benchmarks",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["LLM Shield Contributors"]
repository = "https://github.com/llm-shield/llm-shield-rs"

[workspace.dependencies]
# LLM-Dev-Ops upstream dependencies (Phase 2A - compile-time only)
llm-policy-engine = { git = "https://github.com/LLM-Dev-Ops/policy-engine", branch = "main" }
llm-config-manager = { git = "https://github.com/LLM-Dev-Ops/config-manager", branch = "main" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# ML/AI
ort = { version = "2.0.0-rc.10", features = ["half"] }
tokenizers = "0.20"
ndarray = "0.16"

# Text processing
regex = "1.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
whatlang = "0.16"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = true
