[package]
name = "llm-shield-anonymize"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Anonymization for LLM Shield"

[dependencies]
llm-shield-core = { path = "../llm-shield-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
