[package]
name = "llm-shield-anonymize"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Anonymization for LLM Shield"

[dependencies]
llm-shield-core = { version = "0.1.0", path = "../llm-shield-core" }
llm-shield-models = { version = "0.1.0", path = "../llm-shield-models" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
