[package]
name = "llm-shield-cloud-aws"
version.workspace = true
edition.workspace = true
authors = ["LLM Shield Contributors"]
description = "AWS cloud integrations for LLM Shield - Secrets Manager, S3, CloudWatch"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["aws", "cloud", "secrets", "s3", "cloudwatch"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Core abstractions
llm-shield-cloud = { path = "../llm-shield-cloud" }

# AWS SDK (official)
aws-config = "1.5"
aws-sdk-secretsmanager = "1.45"
aws-sdk-s3 = "1.55"
aws-sdk-cloudwatch = "1.48"
aws-sdk-cloudwatchlogs = "1.40"
aws-types = "1.3"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Utilities
bytes = "1.7"

[dev-dependencies]
tokio-test = "0.4"
futures = { workspace = true }

[features]
default = []

# Optional features
xray = []  # Enable X-Ray tracing (future)
