[package]
name = "llm-shield-cloud-gcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GCP cloud integrations for LLM Shield - Secret Manager, Cloud Storage, Cloud Monitoring"
readme = "README.md"
keywords = ["gcp", "cloud", "secrets", "storage", "monitoring"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Core abstractions
llm-shield-cloud = { version = "0.1.1", path = "../llm-shield-cloud" }

# GCP SDK (official) - using older compatible versions
google-cloud-auth = "0.13"
google-cloud-googleapis = "0.11"
google-cloud-storage = "0.15"
google-cloud-pubsub = "0.25"

# Secrets and monitoring via gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = { workspace = true }

# Utilities
bytes = "1.7"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
futures = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[features]
default = []

# Optional features
trace = []  # Enable Cloud Trace (future)
