[package]
name = "llm-shield-cloud"
version.workspace = true
edition.workspace = true
authors = ["LLM Shield Contributors"]
description = "Cloud abstraction layer for LLM Shield - unified traits for AWS, GCP, and Azure"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cloud", "aws", "gcp", "azure", "abstraction"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
futures = { workspace = true }
serde_yaml = "0.9"
criterion = { workspace = true }

[[bench]]
name = "cloud_bench"
harness = false

[features]
default = []
