[package]
name = "llm-shield-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and traits for LLM Shield security toolkit"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

# Phase 2B Infra dependencies
infra-errors = { workspace = true, optional = true }
infra-json = { workspace = true, optional = true }

[features]
default = []
infra = ["infra-errors", "infra-json"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { workspace = true }
