[package]
name = "llm-shield-models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ML model infrastructure for LLM Shield"

[dependencies]
# Core dependencies
llm-shield-core = { version = "0.1.0", path = "../llm-shield-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# ML/AI
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }

# Utilities
tracing = { workspace = true }
once_cell = { workspace = true }
num_cpus = "1.16"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["json"] }

# Cryptography for checksums
sha2 = "0.10"

# System directories
dirs = "5.0"

# Path expansion
shellexpand = "3.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
criterion = { workspace = true }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "registry_bench"
harness = false
